<resources>
    <string name="app_name">Co-Vaccine Finder</string>
    <string name="no_slots_available">No Slots Available</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="start_a_new_search">Start a new search</string>
    <string name="some_error_occurred_please_try_again">Some error occurred.Please try again</string>
    <string name="dose">Dose</string>
    <string name="age">Age</string>
    <string name="cost">Cost</string>
    <string name="vaccine">Vaccine</string>
    <string name="search_by_pin">Search by Pin</string>
    <string name="search_by_district">Search by District</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="by_default_today_and_next_day_results_will_be_shown"><![CDATA[By default, today & next day results will be shown.]]></string>
    <string name="search">Search</string>
    <string name="eighteen_and_fortyfour">18-44</string>
    <string name="fortyfive_plus">45+</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="centre">centre</string>
    <string name="centres">centres</string>
    <string name="select_cost_type">Select Cost Type</string>
    <string name="select_vaccine_type">Select Vaccine Type</string>
    <string name="covishield">COVISHIELD</string>
    <string name="covaxin">COVAXIN</string>
    <string name="sputnik_v">SPUTNIK V</string>
    <string name="select_age_group">Select Age Group</string>
    <string name="select_dose">Select Dose</string>
    <string name="dose_one_numeric">Dose 1</string>
    <string name="dose_two_numeric">Dose 2</string>
    <string name="select_state">Select state</string>
    <string name="select_district">Select district</string>
    <string name="select_a_state_or_district_to_proceed">Select a state or district to proceed</string>
    <string name="please_select_a_state_first">Please select a state first</string>
    <string name="select_a_state_to_proceed">Select a state to proceed</string>
    <string name="loading">Loading</string>
    <string name="fetching_districts">Fetching districts</string>
    <string name="slot_available">slot available</string>
    <string name="slots_available">slots available</string>
    <string name="dose_one">Dose One</string>
    <string name="dose_two">Dose Two</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="choose_language">Choose Language</string>
    <string name="proceed">Proceed</string>
    <string name="welcome">Welcome !</string>
</resources>